# harbor-flow

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: release-minimal-safe.yml  release-minimal.yml  release.yml  simple-release.yml
.trae/documents/: 在 examples 中实现 Agentic Baidu Search 示例（HarborFlow 语法糖）.md  实现 HarborFlow 一键发布至 PyPI 并发布 v0.1.0.md
docs/: harbor-flow实现设计 V1.0.0.md  harbor-flow技术架构 V1.0.0.md  harbor-flow设计蓝图 V1.0.0.md  project_rules.md  role_rules.md
examples/: advanced_features_demo.py  agentic_baidu_search.py  simple_chat.py
harborflow/: __init__.py  compile.py  decorators.py  types.py  types_additions.py
specs/: DEVELOPMENT_DIARY.md
tests/: conftest.py  test_async_features.py  test_compile.py  test_types.py
